--- a/index.html
+++ b/index.html
@@ -17,28 +17,44 @@
 
   <title>Age calculator app</title>
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    integrity="sha384-PJsj/BTMqILvmcej7ulplguok8ag4xFTPryRq8xevL7eBYSmpXKcbNVuy+P0RMgq" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/03e88b7336.js" crossorigin="anonymous"></script>
+
+  <!-- add bootstrap -->
+  <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- css style -->
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
-  <div class="container">
-    test
+  <div class="container d-flex justify-content-center align-items-center">
+    <form class="w-50">
+      <div class="header position-relative">
+        <div class="custom-input">
+          <h2>
+            Day
+          </h2>
+          <input type="text" placeholder="DD" maxlength="2">
+        </div>
+        <div class="custom-input">
+          <h2>
+            Month
+          </h2>
+          <input type="text" placeholder="MM" maxlength="2">
+        </div>
+        <div class="custom-input">
+          <h2>
+            Year
+          </h2>
+          <input type="text" placeholder="YYYY" maxlength="4">
+        </div>
+        <a type="submit" class="submit position-absolute">
+          <i class="fa-solid fa-arrow-down"></i>
+        </a>
+      </div>
+    </form>
   </div>
-  <!-- Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
+  <!--
   -- years
   -- months
   -- days -->
@@ -52,9 +68,7 @@
 
 
   <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-  </script>
+  <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- JS -->
   <script src="./script.js"></script>
