--- a/index.html
+++ b/index.html
@@ -24,47 +24,74 @@
 
   <!-- css style -->
   <link rel="stylesheet" href="./style.css">
+
+
 </head>
 
 <body>
   <div class="container d-flex justify-content-center align-items-center">
-    <form class="w-50">
+    <form class="shadow my-form" action="/" method="POST">
       <div class="header position-relative">
         <div class="custom-input">
           <h2>
             Day
           </h2>
-          <input type="text" placeholder="DD" maxlength="2">
+          <input name="day" id="day-in" type="text" placeholder="DD" maxlength="2">
+          <h6 class="mt-2 day-error error">
+            error
+          </h6>
         </div>
         <div class="custom-input">
           <h2>
             Month
           </h2>
-          <input type="text" placeholder="MM" maxlength="2">
+          <input name="month" id="month-in" type="text" placeholder="MM" maxlength="2">
+          <h6 class="mt-2 month-error error">
+            This Feild is requird
+          </h6>
         </div>
         <div class="custom-input">
           <h2>
             Year
           </h2>
-          <input type="text" placeholder="YYYY" maxlength="4">
+          <input name="year" id="year-in" type="text" placeholder="YYYY" maxlength="4">
+          <h6 class="mt-2 year-error error">
+            error
+          </h6>
         </div>
-        <a type="submit" class="submit position-absolute">
+        <button type="submit" class="submit position-absolute">
           <i class="fa-solid fa-arrow-down"></i>
-        </a>
+        </button>
+      </div>
+      <div class="result py-5">
+        <div class="item">
+          <h2 id="years-res" class="me-2">--</h2>
+          <h2>
+            years
+          </h2>
+        </div>
+        <div class="item">
+          <h2 id="months-res" class="me-2">--</h2>
+          <h2>
+            months
+          </h2>
+        </div>
+        <div class="item">
+          <h2 id="days-res" class="me-2">--</h2>
+          <h2>
+            days
+          </h2>
+        </div>
       </div>
     </form>
   </div>
-  <!--
-  -- years
-  -- months
-  -- days -->
-
-
-
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
 
   <!-- Bootstrap -->
