--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 
   <script src="https://kit.fontawesome.com/03e88b7336.js" crossorigin="anonymous"></script>
 
+  <!-- animation.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <!-- add bootstrap -->
   <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- css style -->
   <link rel="stylesheet" href="./style.css">
-
 
 </head>
 
