--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="result py-5">
         <div class="item" data-aos="fade-up-right">
-          <h2 id="years-res" class="me-2">--</h2>
+          <h2 id="years-res" class="me-2 aos-animate">--</h2>
           <h2>
             years
           </h2>
